[package]
name = "bril-lvn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bril-utils = { path = "../utils" }

[dependencies.bril-rs]
version = "0.1.0"
path = "../deps/bril/bril-rs"
features = ["ssa", "memory", "float", "speculate", "position"]